--- a/06_finished/css/styles.css
+++ b/06_finished/css/styles.css
@@ -25,11 +25,11 @@
        url('fonts/PTSansBoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
-} 
+}
 
 /* reset browser styles */
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, 
+table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -44,7 +44,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
 	line-height: 1.2;
 }
-ol { 
+ol {
 	padding-left: 1.4em;
 	list-style: decimal;
 }
@@ -55,7 +55,7 @@ ul {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-} 
+}
 /* end reset browser styles */
 
 html {
@@ -103,7 +103,7 @@ html {
   margin-right: 50px;
   margin-bottom: 10px;
 }
-.main p::first-line {
+.main p:first-line {
   font-weight: bold;
   color: rgb(153,153,153);
 }
